# sherpa-on-the-rocks

./: LICENSE  README.md  analyze_runtime.py  prepare_runs.sh  rivet-merge_runs.sh  rivetmerge_runs.sh  run_sherpa.sh  runtime.py  sherpa.jdf  yodamerge_runs.sh
app-build/: README.md  build.jdf  run_app-build.sh
tune/: P1.jdf  P2.jdf  P3.jdf  P4.jdf  P5.jdf  P6.jdf  P7.jdf  P8.jdf  P9.jdf  PARAMETERS.md  README.md  notify.sh  output.py  post.sh  run_P1.sh  run_P2.sh  run_P3.sh  run_P4.sh  run_P5.sh  run_P6.sh  run_P7.sh  run_P8.sh  run_P9.sh  tune.py  utils.sh
tune/example/: TUTORIAL.md  config.yaml  config1.yaml  config2.yaml  config3.yaml
tune/example/Drell-Yan/: app_1_0.json  chi2.json  data.json  err_1_0.json  parameter.json  runs.txt  template.yaml
tune/example/Drell-Yan/chi2-plots/: index.html
tune/example/Drell-Yan/init/: References.tex
tune/example/Drell-Yan/master/: condor_ids.json  phase_times.json  state.json  tune.dag  tune.dag.condor.sub  tune.dag.dagman.out  tune.dag.metrics  tune_summary.txt
tune/example/Drell-Yan/tune.1_0.dir1/: minimum_tnc_500_20.txt  predictions_tnc_500_20.yoda
tune/example/Drell-Yan/tune.err.1_0.dir1/: minimum_tnc_500_20.txt  predictions_tnc_500_20.yoda  (+1 more)
tune/example/Jets/: data.json  nominal.json  template.yaml  weights.txt
tune/example/Jets/init/Process/Amegic/P2_3/fsrchannels3/: C3_0.C  C3_1.C  C3_10.C  C3_11.C  C3_12.C  C3_13.C  C3_14.C  C3_15.C  C3_16.C  C3_17.C  C3_18.C  C3_19.C  C3_2.C  C3_20.C  C3_3.C  C3_4.C  C3_5.C  C3_6.C  C3_7.C  C3_8.C  C3_9.C  CG.C  CMakeLists.txt  Makefile  cmake_install.cmake
(+404 files in other folders)
